feat: Add cleanup functionality and improve report formatting